fixing side swipe on mobile

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -558,7 +558,7 @@
         border: none;
         border-radius: 0px 0px 15px 15px;
 
-        transform: translateX(20px) translateY(-20px);
+        transform: translateX(10px) translateY(-10px);
         transition: opacity 0.5s ease, transform 0.5s ease, background 0.5s ease;
       }
 
